--- a/index.html
+++ b/index.html
@@ -52,14 +52,7 @@
                     <div class="col-md-6">
                         <h1 class="text-primary">Jeremy Christisen</h1>
                         <h3>Data Warehouse Maven</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                            ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-                            nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                            Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-                            enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-                            felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-                            elementum semper nisi.</p>
+                        <p>Jeremy is quiet and private which can make him difficult to get to know. Professionally, he is a hard-working data warehouse expert who strives for perfection and gives his all; personally he is a smart, kind, loyal, respectful, non-judgmental, open-minded, humble, fun soul. Some of his interests include running, hiking, chess, poker, movies, monkeys, meditation, and activities that are intellectually challenging.&nbsp;<br><br>Originally from Iowa, Jeremy&nbsp;moved to the Lansing area in 1999 when he began with Bull. He has spent the last 16 ½ years supporting MDHHS with all things data warehouse related. Jeremy has had various titles throughout the years -  ‘Coding Monkey’ being his self-proclaimed. He made Dan McCandless’ vision of Eligible Months a reality, engineered the Generic Load Process used by developers for data warehouse jobs, designed the CHAMPS data warehouse…which are just a few of his accomplishments.&nbsp;<br><br>He will be greatly missed by&nbsp;all who have worked with him and while saddened to see him we are thankful for all of his contributions and wish him the best.</p>
                     </div>
                 </div>
             </div>
@@ -86,9 +79,10 @@
                         </p>
                     </div>
                     <div class="col-md-6 text-center">
-                        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="550" height="443" src="https://maps.google.com/maps?hl=en&amp;q=314 e Michigan Ave, lansing, mi&amp;ie=UTF8&amp;t=roadmap&amp;z=16&amp;iwloc=B&amp;output=embed">&amp;amp;lt;div&amp;amp;gt;&amp;amp;lt;small&amp;amp;gt;&amp;amp;lt;a href="http://embedgooglemaps.com"&amp;amp;gt; embedgooglemaps.com
-                            &amp;amp;lt;/a&amp;amp;gt;&amp;amp;lt;/small&amp;amp;gt;&amp;amp;lt;/div&amp;amp;gt;&amp;amp;lt;div&amp;amp;gt;&amp;amp;lt;small&amp;amp;gt;&amp;amp;lt;a href="http://premiumlinkgenerator.com"&amp;amp;gt;premium
-                            link generator for 2016!&amp;amp;lt;/a&amp;amp;gt;&amp;amp;lt;/small&amp;amp;gt;&amp;amp;lt;/div&amp;amp;gt;</iframe>&gt;</div>
+                        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="550" height="443" src="https://maps.google.com/maps?hl=en&amp;q=314 e Michigan Ave, lansing, mi&amp;ie=UTF8&amp;t=roadmap&amp;z=16&amp;iwloc=B&amp;output=embed">&amp;amp;amp;lt;div&amp;amp;amp;gt;&amp;amp;amp;lt;small&amp;amp;amp;gt;&amp;amp;amp;lt;a
+                            href="http://embedgooglemaps.com"&amp;amp;amp;gt; embedgooglemaps.com &amp;amp;amp;lt;/a&amp;amp;amp;gt;&amp;amp;amp;lt;/small&amp;amp;amp;gt;&amp;amp;amp;lt;/div&amp;amp;amp;gt;&amp;amp;amp;lt;div&amp;amp;amp;gt;&amp;amp;amp;lt;small&amp;amp;amp;gt;&amp;amp;amp;lt;a
+                            href="http://premiumlinkgenerator.com"&amp;amp;amp;gt;premium link generator
+                            for 2016!&amp;amp;amp;lt;/a&amp;amp;amp;gt;&amp;amp;amp;lt;/small&amp;amp;amp;gt;&amp;amp;amp;lt;/div&amp;amp;amp;gt;</iframe>&gt;</div>
                 </div>
             </div>
         </div>
@@ -174,19 +168,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-
-                                        <ul class="list-group">
-                                            <li class="list-group-item">
-                                                <b>Message from:</b>John H Schuster &nbsp; &nbsp; &nbsp;
-                                                <b>On:</b>&nbsp;Jan 7th, 2016
-                                                <br>Congratulations on your decision to do what heart tells you. &nbsp; I
-                                                am jelous but hope your voyage is fullfilling.</li>
-                                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                                            <li class="list-group-item">Morbi leo risus</li>
-                                            <li class="list-group-item">Porta ac consectetur ac</li>
-                                            <li class="list-group-item">Vestibulum at eros</li>
-                                        </ul>
-                                    
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <b>Message from:</b>John H Schuster &nbsp; &nbsp; &nbsp;
+                                <b>On:</b>&nbsp;Jan 7th, 2016
+                                <br>Congratulations on your decision to do what heart tells you. &nbsp; I
+                                am jelous but hope your voyage is fullfilling.</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -233,7 +225,6 @@
                 </div>
             </div>
         </footer>
-
-
+    
 
 </body></html>
