--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <label class="control-label" for="guestTotal">Number of guest attending, including yourself</label>
                                 <input required class="form-control" min="1" id="guestTotal" placeholder="How many people attending" type="number">
                             </div>
-							<button style="display:none;" type="submit"></button>                            
+							<button style="display:none;" type="submit"></button>
                         </form>
 						<button id="btnSubmitAttendance" class="btn btn-primary" onclick="submitGuest();">Submit</button>
 						&nbsp;&nbsp;&nbsp;&nbsp;
@@ -134,7 +134,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <ul id="ulAttendingList" class="list-group">
-                                     
+
                                     </ul>
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
 								<textarea required id="guestMessage" class="form-control" rows="4" placeholder="Leave a public message to Jeremy"></textarea>
                                 <!--<input class="form-control" id="guestMessage" placeholder="Leave a public message to Jeremy" type="text"> -->
                             </div>
-							<button style="display:none;" type="submit"></button>                            
+							<button style="display:none;" type="submit"></button>
                         </form>
 						<button id="btnSubmitMessage" class="btn btn-primary" onclick="submitMessage();">Submit</button>
 						&nbsp;&nbsp;&nbsp;&nbsp;
@@ -192,7 +192,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center text-primary">Hosts</h1>
-                        <p class="text-center">John HR Schuster,&nbsp;</p>
+                        <p class="text-center">John HR Schuster and Monty Bieber&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -206,11 +206,11 @@
 				  <button type="button" class="close" data-dismiss="modal">&times;</button>
 				  <h4 class="modal-title text-center">'43'</h4>
 				</div>
-				<div class="modal-body">				  
+				<div class="modal-body">
 				  <iframe width="100%" height="70%" frameborder="0" allowfullscreen src="http://www.youtube.com/embed/fqa48tqNOj8?html5=1"></iframe>
 				</div>
 			  </div>
-			  
+
 			</div>
 		</div>
         <footer class="section section-primary" id="footerPane">
@@ -248,7 +248,7 @@
 		<!-- Scrolling Nav JavaScript -->
 		<script src="js/jquery.easing.min.js"></script>
 		<script src="js/index.js"></script>
-		
+
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	</body>
 </html>
