Added 43 aS EXTERNAL VIDEO, yOUTUBE BLOCKED AT uhc

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="col-sm-6">
                         <h1>Site provided by&nbsp;
                             <br>Phoenix Learning Labs</h1>
-                        <p>Developer: &nbsp;John HR Schuster and Anush Pederla</p>
+                        <p>Developers: &nbsp;John HR Schuster and Anush Pederla</p>
                     </div>
                     <div class="col-sm-6">
                         <p class="text-info text-right">
