Spedlling mistakes corrected.

--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@
                         <h1 class="text-primary">The Party!</h1>
                         <h3><a style="cursor: pointer;" onclick="mobileNavFunc()">The Exchange, 314 E. Michigan Ave, Lansing, MI</a>
                             <br><span type="date">Friday January 22nd </span> 6pm - whenever</h3>
-                        <p>The Terrace Lounge sits above The Exchange main floor, and where its big
-                            comfy couches and candlelight atmosphere is fast becoming the hidden hotspot
-                            in downtown.
+                        <p>The Terrace Lounge sits above The Exchange main floor, and where it’s big comfy couches and candlelight atmosphere
+													is fast becoming the hidden hotspot in downtown.
                             <br>
-                            <br>There will be appitizers and open bar from 6pm to 7PM. &nbsp;
+                            <br>TThere will be appetizers and open bar from 6pm to 7PM.
                             <br>
-                            <br>PLEASE: &nbsp;Register for the party, using the form below. &nbsp;Let
-                            us know if your coming and how many &nbsp;guests, this will help us plan
-                            for right amount of brevages and appitizers. &nbsp;
+                            <br>PLEASE: Register for the party, using the form below.
+														Let us know if you’re coming and how many guests, this will help us plan for right amount of beverages and appetizers.
                             <br>
                             <br>
                             <br>
@@ -115,7 +113,6 @@
 							<button style="display:none;" type="submit"></button>
                         </form>
 						<button id="btnSubmitAttendance" class="btn btn-primary" onclick="submitGuest();">Submit</button>
-						&nbsp;&nbsp;&nbsp;&nbsp;
 						<label style="color:green;font-style: italic" id="lblGuest"></label>
                     </div>
                 </div>
@@ -126,6 +123,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center text-primary">Who is going to the party?</h1>
+												<h2 class="text-center text-primary">How many are going to the party?  47</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -207,7 +205,8 @@
 				  <h4 class="modal-title text-center">'43'</h4>
 				</div>
 				<div class="modal-body">
-				  <iframe width="100%" height="70%" frameborder="0" allowfullscreen src="http://www.youtube.com/embed/fqa48tqNOj8?html5=1"></iframe>
+          <!-- old: <iframe width="100%" height="70%" frameborder="0" allowfullscreen src="http://www.youtube.com/embed/fqa48tqNOj8?html5=1"></iframe>  -->
+					<video src="media/43.mp4" autoplay height="70%" width="100%" controls></video>
 				</div>
 			  </div>
 
