Fixed auto play

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
 				</div>
 				<div class="modal-body">
           <!-- old: <iframe width="100%" height="70%" frameborder="0" allowfullscreen src="http://www.youtube.com/embed/fqa48tqNOj8?html5=1"></iframe>  -->
-					<video src="media/43.mp4" autoplay height="70%" width="100%" controls></video>
+					<!--- Autoplay probably not a good idea, video plays without the modal opening -->
+					<video src="media/43.mp4" height="70%" width="100%" controls></video>
 				</div>
 			  </div>
 
