--- a/index.html
+++ b/index.html
@@ -52,9 +52,22 @@
                         <img src="images/jeremy.jpg" class="img-responsive">
                     </div>
                     <div class="col-md-6">
-                        <h1 class="text-primary">Jeremy Christisen</h1>
+                        <h1 class="text-primary">Jeremy Christiansen</h1>
                         <h3>Data Warehouse Maven</h3>
-                        <p>Jeremy is quiet and private which can make him difficult to get to know. Professionally, he is a hard-working data warehouse expert who strives for perfection and gives his all; personally he is a smart, kind, loyal, respectful, non-judgmental, open-minded, humble, fun soul. Some of his interests include running, hiking, chess, poker, movies, monkeys, meditation, and activities that are intellectually challenging.&nbsp;<br><br>Originally from Iowa, Jeremy&nbsp;moved to the Lansing area in 1999 when he began with Bull. He has spent the last 16 ½ years supporting MDHHS with all things data warehouse related. Jeremy has had various titles throughout the years -  ‘Coding Monkey’ being his self-proclaimed. He made Dan McCandless’ vision of Eligible Months a reality, engineered the Generic Load Process used by developers for data warehouse jobs, designed the CHAMPS data warehouse…which are just a few of his accomplishments.&nbsp;<br><br>He will be greatly missed by&nbsp;all who have worked with him and while saddened to see him we are thankful for all of his contributions and wish him the best.</p>
+                        <p>Jeremy is quiet and private which can make him difficult to get to know. Professionally,
+													he is a hard-working data warehouse expert who strives for perfection and gives his all;
+													personally he is a smart, kind, loyal, respectful, non-judgmental, open-minded, humble, fun soul.
+													Some of his interests include running, hiking, chess, poker, movies, monkeys, meditation,
+													and activities that are intellectually challenging.&nbsp;<br><br>
+													Originally from Iowa,
+													Jeremy moved to the Lansing area in 1999 when he began with Bull.
+													He has spent the last 16 ½ years supporting MDHHS with all things data warehouse related.
+													Jeremy has had various titles throughout the years -  ‘Coding Monkey’ being his self-proclaimed.
+													He made Dan McCandless’ vision of Eligible Months a reality,
+													engineered the Generic Load Process used by developers for data warehouse jobs,
+													designed the CHAMPS data warehouse…which are just a few of his accomplishments.<br><br>
+													He will be greatly missed by all who have worked with him and while saddened to see him leave, we are thankful
+													for all of his contributions and wish him the best.</p>
                     </div>
                 </div>
             </div>
@@ -69,7 +82,7 @@
                         <p>The Terrace Lounge sits above The Exchange main floor, and where it’s big comfy couches and candlelight atmosphere
 													is fast becoming the hidden hotspot in downtown.
                             <br>
-                            <br>TThere will be appetizers and open bar from 6pm to 7PM.
+                            <br>There will be appetizers and open bar from 6pm to 7PM.
                             <br>
                             <br>PLEASE: Register for the party, using the form below.
 														Let us know if you’re coming and how many guests, this will help us plan for right amount of beverages and appetizers.
@@ -123,7 +136,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center text-primary">Who is going to the party?</h1>
-												<h2 class="text-center text-primary">How many are going to the party?  47</h2>
+												<h2 class="text-center text-primary">How many are going to the party?  </h2>
                     </div>
                 </div>
                 <div class="row">
